tests/literal/literal.exp
enum_client.js:6
  6: foo("LOCATION"); // error
         ^^^^^^^^^^ property `LOCATION`. Property not found in
  4: function foo(x: $Keys<typeof APIKeys>) { }
                     ^^^^^^^^^^^^^^^^^^^^^ object literal

enum_client.js:10
 10: bar(APIKeys.NAME); // error: since "NAME" is not in the smaller enum
         ^^^^^^^^^^^^ property `name`. Property not found in
  8: function bar(x: $Keys<{age: number}>) { }
                     ^^^^^^^^^^^^^^^^^^^^ object type

enum_client.js:17
 17: var name:number = object[APIKeys.NAME]; // error: object.name is a string
                       ^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 17: var name:number = object[APIKeys.NAME]; // error: object.name is a string
              ^^^^^^ number

enum_client.js:21
 21: var red:string = tuple[indices.red]; // error: tuple[0] is a number
                      ^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 21: var red:string = tuple[indices.red]; // error: tuple[0] is a number
             ^^^^^^ string

number.js:6
  6:   return -x;
              ^^ unary minus operator. Expected number instead of
  6:   return -x;
               ^ string


Found 5 errors
